--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "isotope-layout": "^3.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-masonry": "^2.7.1",
     "tailwindcss": "^3.4.13"
   }
 }
