--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "astro": "^4.15.10",
     "framer-motion": "^12.23.12",
     "isotope-layout": "^3.0.6",
+    "lucide-react": "^0.545.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-responsive-masonry": "^2.7.1",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
